# Kromacut

./: .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  TAURI.md  UPDATE_CHECKER.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: deploy-pages.yml  release.yml
docs/: TAURI.md
public/: site.webmanifest  version.json
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AdjustmentsPanel.tsx  AutoPaintTab.tsx  CanvasPreview.tsx  ControlsPanel.tsx  DeditherPanel.tsx  FilamentCalibrationWizard.tsx  FilamentRow.tsx  Header.tsx  ModeTabs.tsx  PaletteManager.tsx  PaletteSelector.tsx  PreviewActions.tsx  PrintInstructions.tsx  PrintSettingsCard.tsx  ResizableSplitter.tsx  SwatchesPanel.tsx  ThreeDColorRow.tsx  ThreeDControls.tsx  ThreeDView.tsx  UpdateChecker.tsx  UploaderControls.tsx  sliderDefs.ts
src/data/: filamentLibrary.ts  palettes.ts
src/hooks/: useAppHandlers.ts  useAutoPaintWorker.ts  useBuildWarning.ts  useColorSlicing.ts  useDropzone.ts  useFilaments.ts  useHorizontalSplit.ts  useImageHistory.ts  usePaletteManager.ts  useProcessingState.ts  useProfileManager.ts  useQuantize.ts  useSwapPlan.ts  useSwatches.ts  useThreeScene.ts
src/lib/: algorithms.ts  applyAdjustments.ts  autoPaint.ts  calibration.ts  color.ts  colorUtils.ts  compose-refs.ts  export3mf.ts  exportStl.ts  generateCalibrationPatchesStl.ts  (+8 more)
(+8 files in other folders)
