[package]
name = "kromacut"
version = "2.4.0"
description = "Kromacut - Multi-color lithophane 3D print generator"
authors = ["vycdev"]
license = "MIT"
repository = "https://github.com/vycdev/Kromacut"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kromacut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["devtools"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
